[APHL-551] fix style and API compatibility errors